1998-08-15  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (libgnomesupport_la_SOURCES): List `gnomesupport.h'
	here to ensure that it is built.

1998-08-05  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (noinst_HEADERS): Add `gnomesupport-fake.h'.

1998-08-02  Raja R Harinath  <harinath@cs.umn.edu>

	* error.c (program_name): Clean up #ifdef logic some more.
	(HAVE_STRERROR_R): Step on implementation namespace only if _LIBC.

1998-07-30  Martin Baulig  <martin@home-of-linux.org>

	* error.c: Making weak alias `__error' and `__error_at_line'
	only if `_LIBC' is defined and not if we only
	HAVE_PROGRAM_INVOCATION_NAME.

	* gnomesupport-fake.h: Include gnome-argp.h to get
	`program_invocation_name'.

1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-fake.h: New file.  Fake in HAVE_* for functions
	that are provided by `gnomesupport' rather than `libc'.
	* error.c: Include gnomesupport-fake.h.
	(program_name): Define to `program_invocation_name' if 
	HAVE_PROGRAM_INVOCATION_NAME.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* error.c, error.h: New files.  Imported from glibc.

	* Makefile.am (supportinclude_HEADERS): Added `error.h'.

1998-07-17  Martin Baulig  <martin@home-of-linux.org>

	* strtol.c, strtoul.c (<ansidecl.h>): Removed. Using
	`const' instead of `CONST'.

1998-07-15  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport.awk (gethostname): Emit declaration.

1998-07-15  Martin Baulig  <baulig@Stud.Informatik.uni-trier.de>

	* gnomesupport.awk (memmove strtod strtol strtoul): Emit
	declarations.

	* memmove.c: New file.  Imported from GNU libiberty.

	* strtod.c, strtol.c, strtoul.c: New files. Imported from
	GNU libiberty.

1998-07-14  Raja R Harinath  <harinath@cs.umn.edu>

	* mkstemp.c (<stdint.h>): Systems that don't have `mkstemp'
	probably don't have <stdint.h> either.  Will fix it with a proper
	autoconf test later.

1998-07-13  Raja R Harinath  <harinath@cs.umn.edu>
